syntax = "proto3";

package com.hubspot.jackson.datatype.protobuf.util;

option java_outer_classname = "TestProtobuf3";

message AllFieldsProto3 {
  double double = 1;
  float float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 sint32 = 7;
  sint64 sint64 = 8;
  fixed32 fixed32 = 9;
  fixed64 fixed64 = 10;
  sfixed32 sfixed32 = 11;
  sfixed64 sfixed64 = 12;
  bool bool = 13;
  string string = 14;
  bytes bytes = 15;
  EnumProto3 enum = 16;
  NestedProto3 nested = 17;
}

message RepeatedFieldsProto3 {
  repeated double double = 1;
  repeated float float = 2;
  repeated int32 int32 = 3;
  repeated int64 int64 = 4;
  repeated uint32 uint32 = 5;
  repeated uint64 uint64 = 6;
  repeated sint32 sint32 = 7;
  repeated sint64 sint64 = 8;
  repeated fixed32 fixed32 = 9;
  repeated fixed64 fixed64 = 10;
  repeated sfixed32 sfixed32 = 11;
  repeated sfixed64 sfixed64 = 12;
  repeated bool bool = 13;
  repeated string string = 14;
  repeated bytes bytes = 15;
  repeated EnumProto3 enum = 16;
  repeated NestedProto3 nested = 17;
}

message NestedProto3 {
  double double = 1;
  float float = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 sint32 = 7;
  sint64 sint64 = 8;
  fixed32 fixed32 = 9;
  fixed64 fixed64 = 10;
  sfixed32 sfixed32 = 11;
  sfixed64 sfixed64 = 12;
  bool bool = 13;
  string string = 14;
  bytes bytes = 15;
  EnumProto3 enum = 16;
}

enum EnumProto3 {
  DEFAULT = 0;
  FIRST = 1;
  SECOND = 2;
}

message Custom {
  int32 value = 1;
}

message CustomMessageWrapper {
  Custom custom = 1;
}

message RepeatedCustomWrapper {
  repeated Custom custom = 1;
}

message JsonNameProto3 {
  string custom_name = 1 [json_name = "custom-name"];
  string lower_camel = 2 [json_name = "lowerCamel"];
  string lower_underscore = 3 [json_name = "lower_underscore"];
  string different_name = 4 [json_name = "surprise!"];
}

message UnconventionalProto3 {
  string camelCase = 1;
  string weird_UpperCamelCase = 2;
  string weird_lowerCamelCase = 3;
  string weird_1lowerCamelCase = 4;
  string weird_2UpperCamelCase = 5;
  string weird_3_lowerCamelCase = 6;
  string weird_4_UpperCamelCase = 7;
}